--- a/train_model_local.ipynb
+++ b/train_model_local.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "5633ed8e",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,7 @@
     "import pandas as pd\n",
     "from src.train import train_loop\n",
     "from src.model import CNNLSTMModel\n",
-    "from src.data_loader import InverterTimeSeriesDataset\n",
+    "from src.dataset import InverterTimeSeriesDataset\n",
     "import torch\n",
     "\n",
     "inverter_data = pd.read_parquet('data/inverter_data/')\n",
@@ -27,7 +27,8 @@
    "source": [
     "## TO BE REPLACED\n",
     "inverter_data['label'] = 0\n",
-    "sample_data = inverter_data[inverter_data['device_name'] == 'INV 51'].iloc[:1000].copy()\n",
+    "#sample_data = inverter_data[inverter_data['device_name'] == 'INV 51'].copy()\n",
+    "sample_data = inverter_data.copy()\n",
     "sample_data.fillna(0, inplace=True)"
    ]
   },
@@ -41,14 +42,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing devices:   0%|          | 0/1 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing devices: 100%|██████████| 1/1 [00:00<00:00,  2.53it/s]\n"
+      "Processing devices: 100%|██████████| 16/16 [00:04<00:00,  3.36it/s]\n"
      ]
     }
    ],
@@ -81,27 +75,69 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Epoch 1/10] Step 0/31 - Loss: 0.2917\n",
-      "🔁 Epoch 1 finished. Avg Train Loss: 0.2135\n",
-      "[Epoch 2/10] Step 0/31 - Loss: 0.0835\n",
-      "🔁 Epoch 2 finished. Avg Train Loss: 0.0280\n",
-      "[Epoch 3/10] Step 0/31 - Loss: 0.0026\n",
-      "🔁 Epoch 3 finished. Avg Train Loss: 0.0011\n",
-      "[Epoch 4/10] Step 0/31 - Loss: 0.0009\n",
-      "🔁 Epoch 4 finished. Avg Train Loss: 0.0006\n",
-      "[Epoch 5/10] Step 0/31 - Loss: 0.0003\n",
-      "🔁 Epoch 5 finished. Avg Train Loss: 0.0004\n",
-      "[Epoch 6/10] Step 0/31 - Loss: 0.0001\n",
-      "🔁 Epoch 6 finished. Avg Train Loss: 0.0002\n",
-      "[Epoch 7/10] Step 0/31 - Loss: 0.0001\n",
-      "🔁 Epoch 7 finished. Avg Train Loss: 0.0002\n",
-      "[Epoch 8/10] Step 0/31 - Loss: 0.0001\n",
-      "🔁 Epoch 8 finished. Avg Train Loss: 0.0002\n",
-      "[Epoch 9/10] Step 0/31 - Loss: 0.0003\n",
-      "🔁 Epoch 9 finished. Avg Train Loss: 0.0001\n",
-      "[Epoch 10/10] Step 0/31 - Loss: 0.0000\n",
-      "🔁 Epoch 10 finished. Avg Train Loss: 0.0001\n",
-      "🏁 Training completed.\n"
+      "[Epoch 1/10] Step 0/191359 - Loss: 0.2779\n",
+      "[Epoch 1/10] Step 100/191359 - Loss: 0.0014\n",
+      "[Epoch 1/10] Step 200/191359 - Loss: 0.0001\n",
+      "[Epoch 1/10] Step 300/191359 - Loss: 0.0001\n",
+      "[Epoch 1/10] Step 400/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 500/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 600/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 700/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 800/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 900/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 1000/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 1100/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 1200/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 1300/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 1400/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 1500/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 1600/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 1700/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 1800/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 1900/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 2000/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 2100/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 2200/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 2300/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 2400/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 2500/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 2600/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 2700/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 2800/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 2900/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 3000/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 3100/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 3200/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 3300/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 3400/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 3500/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 3600/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 3700/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 3800/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 3900/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 4000/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 4100/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 4200/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 4300/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 4400/191359 - Loss: 0.0000\n",
+      "[Epoch 1/10] Step 4500/191359 - Loss: 0.0000\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mtrain_loop\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_loader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_epochs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moptimizer\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43moptimizer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcriterion\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcriterion\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\USER\\OneDrive\\文件\\academic\\ucla\\capstone\\src\\train.py:27\u001b[0m, in \u001b[0;36mtrain_loop\u001b[1;34m(model, train_loader, val_loader, device, optimizer, criterion, num_epochs, time_step, scheduler, log_interval)\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m batch_idx, (X, y) \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(train_loader):\n\u001b[0;32m     25\u001b[0m     X, y \u001b[38;5;241m=\u001b[39m X\u001b[38;5;241m.\u001b[39mto(device), y\u001b[38;5;241m.\u001b[39mto(device)\u001b[38;5;241m.\u001b[39mfloat()\n\u001b[1;32m---> 27\u001b[0m     \u001b[43moptimizer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mzero_grad\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     28\u001b[0m     output \u001b[38;5;241m=\u001b[39m model(X)\n\u001b[0;32m     29\u001b[0m     output \u001b[38;5;241m=\u001b[39m output\u001b[38;5;241m.\u001b[39msqueeze()  \u001b[38;5;66;03m# [B] if needed\u001b[39;00m\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\torch\\_compile.py:24\u001b[0m, in \u001b[0;36m_disable_dynamo.<locals>.inner\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[38;5;129m@functools\u001b[39m\u001b[38;5;241m.\u001b[39mwraps(fn)\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21minner\u001b[39m(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[0;32m     22\u001b[0m     \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_dynamo\u001b[39;00m\n\u001b[1;32m---> 24\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_dynamo\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdisable\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfn\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrecursive\u001b[49m\u001b[43m)\u001b[49m(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\torch\\_dynamo\\decorators.py:47\u001b[0m, in \u001b[0;36mdisable\u001b[1;34m(fn, recursive)\u001b[0m\n\u001b[0;32m     45\u001b[0m         fn \u001b[38;5;241m=\u001b[39m innermost_fn(fn)\n\u001b[0;32m     46\u001b[0m         \u001b[38;5;28;01massert\u001b[39;00m callable(fn)\n\u001b[1;32m---> 47\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mDisableContext\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfn\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     48\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m DisableContext()\n\u001b[0;32m     49\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\torch\\_dynamo\\eval_frame.py:290\u001b[0m, in \u001b[0;36m_TorchDynamoContext.__call__\u001b[1;34m(self, fn)\u001b[0m\n\u001b[0;32m    287\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m callable(fn)\n\u001b[0;32m    289\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 290\u001b[0m     filename \u001b[38;5;241m=\u001b[39m \u001b[43minspect\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgetsourcefile\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfn\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    291\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[0;32m    292\u001b[0m     filename \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "File \u001b[1;32mC:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.10_3.10.3056.0_x64__qbz5n2kfra8p0\\lib\\inspect.py:826\u001b[0m, in \u001b[0;36mgetsourcefile\u001b[1;34m(object)\u001b[0m\n\u001b[0;32m    823\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28many\u001b[39m(filename\u001b[38;5;241m.\u001b[39mendswith(s) \u001b[38;5;28;01mfor\u001b[39;00m s \u001b[38;5;129;01min\u001b[39;00m\n\u001b[0;32m    824\u001b[0m              importlib\u001b[38;5;241m.\u001b[39mmachinery\u001b[38;5;241m.\u001b[39mEXTENSION_SUFFIXES):\n\u001b[0;32m    825\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m--> 826\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpath\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexists\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilename\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[0;32m    827\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m filename\n\u001b[0;32m    828\u001b[0m \u001b[38;5;66;03m# only return a non-existent filename if the module has a PEP 302 loader\u001b[39;00m\n",
+      "File \u001b[1;32mC:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.10_3.10.3056.0_x64__qbz5n2kfra8p0\\lib\\genericpath.py:19\u001b[0m, in \u001b[0;36mexists\u001b[1;34m(path)\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Test whether a path exists.  Returns False for broken symbolic links\"\"\"\u001b[39;00m\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m---> 19\u001b[0m     \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstat\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     20\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m (\u001b[38;5;167;01mOSError\u001b[39;00m, \u001b[38;5;167;01mValueError\u001b[39;00m):\n\u001b[0;32m     21\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
