--- a/evaluate_model.ipynb
+++ b/evaluate_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "id": "943d0bf0",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "5323de9f",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "id": "7bf9ce06",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "id": "2051b48d",
    "metadata": {},
    "outputs": [
@@ -61,9 +61,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing devices: 100%|██████████| 16/16 [00:00<00:00, 30.69it/s]\n",
-      "Processing devices: 100%|██████████| 16/16 [00:00<00:00, 55.78it/s]\n",
-      "Processing devices: 100%|██████████| 16/16 [00:00<00:00, 76.36it/s]\n"
+      "Processing devices: 100%|██████████| 16/16 [00:00<00:00, 27.03it/s]\n",
+      "Processing devices: 100%|██████████| 16/16 [00:00<00:00, 51.25it/s]\n",
+      "Processing devices: 100%|██████████| 16/16 [00:00<00:00, 63.22it/s]\n"
      ]
     }
    ],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "id": "45e5c8d0",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "78dc9a39",
    "metadata": {},
    "outputs": [
@@ -120,7 +120,7 @@
        ")"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,13 +128,13 @@
    "source": [
     "# load model\n",
     "model = CNNLSTMModel(num_features=train_df.shape[1]-3, lstm_layers=2)\n",
-    "model.load_state_dict(torch.load(r'model\\best_model_whole.pth'))\n",
+    "model.load_state_dict(torch.load(r'model\\best_model.pth'))\n",
     "model.eval()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "88134fec",
    "metadata": {},
    "outputs": [],
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 38,
    "id": "05eed7e8",
    "metadata": {},
    "outputs": [
@@ -168,9 +168,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Testing: 100%|██████████| 42/42 [00:14<00:00,  2.86it/s]\n",
-      "Testing: 100%|██████████| 12/12 [00:12<00:00,  1.01s/it]\n",
-      "Testing: 100%|██████████| 11/11 [00:11<00:00,  1.04s/it]\n"
+      "Testing: 100%|██████████| 42/42 [00:16<00:00,  2.48it/s]\n",
+      "Testing: 100%|██████████| 12/12 [00:10<00:00,  1.12it/s]\n",
+      "Testing: 100%|██████████| 11/11 [00:10<00:00,  1.06it/s]\n"
      ]
     }
    ],
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "9b0b5ee9",
    "metadata": {},
    "outputs": [],
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "f106aa7e",
    "metadata": {},
    "outputs": [],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 41,
    "id": "7baadf4e",
    "metadata": {},
    "outputs": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "7ae0478a",
    "metadata": {},
    "outputs": [
@@ -36818,7 +36818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 43,
    "id": "f7915ff1",
    "metadata": {},
    "outputs": [
@@ -36859,7 +36859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 44,
    "id": "11f84311",
    "metadata": {},
    "outputs": [
